# thienthulau-v2

./: .gitignore
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 081d0c8f4d27_make_chapter_fields_nullable_add_status.py  12e7533a8a18_init_tables.py  4e653d04efe0_add_introduce_to_book_and_summary_to_.py  5495e5ef0b76_init.py  db07e12c6486_use_uuid_for_all_ids.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/endpoints/: book.py  chapter.py  glossary.py
backend/app/core/: config.py  database.py  llm.py
backend/app/models/: __init__.py  base.py  book.py  chapter.py  glossary.py
backend/app/prompts/: __init__.py  extract_glossary.py  translate_chapter.py
backend/app/repositories/: book.py  chapter.py  glossary.py
backend/app/schemas/: book.py  chapter.py  glossary.py
backend/app/services/: book.py  chapter.py  glossary.py
frontend/: index.html  package-lock.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  BatchUpload.tsx  HomePage.tsx  ReaderPage.tsx  index.css
